# src/main/java/vn/cmax/cafe/promotion/PromotionEntity.java
@@ -1,0 +1,30 @@
+package vn.cmax.cafe.promotion;
+
+import lombok.*;
+import org.springframework.validation.annotation.Validated;
+import vn.cmax.cafe.support.DomainAudit;
+
+import javax.persistence.*;
+import java.io.Serializable;
+
+@Validated
+@Getter
+@Setter
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+@Entity
+@Table(name = "promotion")
+public class PromotionEntity extends DomainAudit implements Serializable {
+    private static final long serialVersionUid = 1L;
+
+    @Id
+    @GeneratedValue
+    private Long id;
+
+    @Column(name = "title")
+    private String title;
+
+    @Column(name = "content")
+    private String content;
+}
